fixed the search button alignment

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -87,14 +87,14 @@
 }
 
 .btnStyle {
-  width: 80px;
+  width: 20%;
+  height: 100%;
   padding: 9px;
   background-color: rgb(48, 20, 20);
   color: rgb(255, 238, 0);
   font-size: 1rem;
   font-weight: 900;
   border-radius: 10px;
-  margin: 5px;
   border-radius: 30px;
   transition-duration: 0.8s;
   text-decoration: none;
@@ -109,7 +109,7 @@
 
 .inputStyle {
   width: 100%;
-  margin: 5.5px;
+  height: 100%;
   padding: 10px;
   font-size: 1rem;
   border-radius: 30px;
@@ -626,16 +626,20 @@ nav {
   }
 
   .search {
-    width: 100%;
+    width: 100vw;
+
+    padding: 0;
   }
   .inputStyle {
-    width: 98%;
-    margin-right: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
   }
 
   .btnStyle {
-    margin-right: 0;
-    padding: 9px;
+    margin: 0;
+    width: 20%;
+    height: 100%;
   }
 
   .headImage {
